removed resume from index.html and added link

--- a/index.html
+++ b/index.html
@@ -3,73 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="resume.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
-    <title>Geoff Crittenden - Resume</title>
+    <title>Geoff Crittenden</title>
   </head>
 
   <body>
-    <div class="topper">
-      <h1>GEOFFREY M. CRITTENDEN</h1>
-
-      <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt@gmail.com</span></p>
-
-      <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
-      <p class="skills">Agile Development | Ruby on Rails | JavaScript | HTML | CSS</p>
-      <p class="skills">Object-Oriented Design | TDD | RSpec | ActiveRecord | SQL</p>
-    </div>
-
-    <div class="recent">
-      <h3>- RECENT SOFTWARE PROJECTS -</h3>
-        <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
-        </ul>
-        <h4>Instant Meal Ordering | <a href="https://github.com/geoffcrittenden/qr_code" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>Framework for a fast-food ordering app to expedite point-of-sale for restaurants.</p>
-        </ul>
-        <h4>ChromeCast Slideshow | <a href="https://github.com/geoffcrittenden/light-it-up" target="_blank">GitHub Repo</a></h4>
-        <ul>
-          <p>A slideshow application to display information on a ChromeCast homepage between casts.</p>
-        </ul>
-    </div>
-
-    <div class="education">
-      <h3>- EDUCATION & TRAINING -</h3>
-        <h4>Dev Bootcamp - Chicago, IL - 2013</h4>
-          <ul>
-            <p>Nine-week intensive web development course.</p>
-          </ul>
-        <h4>M.S., Digital Cinema - DePaul University - 2012</h4> 
-          <ul>
-            <p>Film & TV production focusing on the independent filmmaking model.</p>
-          </ul>
-        <h4>B.S., Atmospheric, Oceanic & Space Sci. - U. of Michigan - 2000</h4>
-          <ul>
-            <p>Completed College of Engineering Core Curriculum.</p>
-            <p>Concentrated in atmospheric technology and space systems design.</p>
-          </ul>
-    </div>
-
-    <div class="experience">
-      <h3>- PREVIOUS PROFESSIONAL EXPERIENCE -</h3>
-        <h4>Freelance Media Production Professional, 2009 - 2013</h4>
-          <ul>
-            <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
-          </ul>
-        <h4>Defense Contractor - BroadBay Group, Inc., 2008 - 2009</h4>
-          <ul>
-            <p>Operated airborne camera and provided aviation support for military units in training.</p>
-            <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
-            <p>Co-authored Naval Special Warfare unmanned aircraft systems operating instruction.</p>
-          </ul>
-        
-        <h4>Naval Officer - Combat Aviator, 2000 - 2008</h4>
-          <ul>
-            <p>Amassed over 1400 tactical flight hours and 200 carrier arrested landings in both F-14A Tomcat and F/A-18F Super Hornet fighter aircraft.</p>
-            <p>Flew 36 combat missions in support of Operations SOUTHERN WATCH and IRAQI FREEDOM.</p>
-            <p>Decorated for actions over enemy territory by being awarded Air Medal with 'V'.</p>
-          </ul>
-    </div>
-
+    <a href="/resume.html">Link to my resume</a>
   </body>
 </html>
