--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
 
   <body>
-    <a href="/resume.html">Link to my resume</a>
+    <a href="/geoffcrittenden-com/resume.html">Link to my resume</a>
   </body>
 </html>
