added nav selector with link to resume

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
-    <a href="/geoffcrittenden-com/resume.html">Link to my resume</a>
+    <nav><ul><li><a href="/geoffcrittenden-com/resume.html">Resume</a></li></ul></nav>
+    My name is Geoff Crittenden, and this is my website.
   </body>
 </html>
