added links to experience and education as well as formatted years

--- a/resume.html
+++ b/resume.html
@@ -35,15 +35,15 @@
 
     <div class="education">
       <h3>- EDUCATION & TRAINING -</h3>
-        <h4>Dev Bootcamp - Chicago, IL - 2013</h4>
+        <h4><a href="http://devbootcamp.com" target="_blank">Dev Bootcamp</a> - Chicago, IL<span class="year">2013</span></h4>
           <ul>
             <p>Nine-week intensive web development course.</p>
           </ul>
-        <h4>M.S., Digital Cinema - DePaul University - 2012</h4> 
+        <h4>M.S., <a href="http://www.cdm.depaul.edu/academics/Pages/MSDigitalCinema.aspx" target="_blank">Digital Cinema</a> - <a href="http://depaul.edu/" target="_blank">DePaul University</a><span class="year">2012</span></h4> 
           <ul>
             <p>Film & TV production focusing on the independent filmmaking model.</p>
           </ul>
-        <h4>B.S., Atmospheric, Oceanic & Space Sci. - U. of Michigan - 2000</h4>
+        <h4>B.S., <a href="http://aoss.engin.umich.edu/" target="_blank">Atmospheric, Oceanic & Space Sci.</a> - <a href="http://umich.edu/" target="_blank">U. of Michigan</a><span class="year">2000</span></h4>
           <ul>
             <p>Completed College of Engineering Core Curriculum.</p>
             <p>Concentrated in atmospheric technology and space systems design.</p>
@@ -52,22 +52,22 @@
 
     <div class="experience">
       <h3>- PREVIOUS PROFESSIONAL EXPERIENCE -</h3>
-        <h4>Freelance Media Production Professional, 2009 - 2013</h4>
+        <h4>Freelance Media Production - <a href="http://www.imdb.com/name/nm4507805/?ref_=fn_al_nm_1" target="_blank">IMDb Profile</a><span class="year">2009 - 2013</span></h4>
           <ul>
             <p>Worked for numerous film, TV and web productions in multiple roles, including Producer, Production Coordinator, Camera Operator, Location Manager, Location Scout & Production Assistant.</p>
           </ul>
-        <h4>Defense Contractor - BroadBay Group, Inc., 2008 - 2009</h4>
+        <h4>Defense Contractor - <a href="http://www.broadbaygroup.com/" target="_blank">BroadBay Group, Inc.</a><span class="year">2008 - 2009</span></h4>
           <ul>
             <p>Operated airborne camera and provided aviation support for military units in training.</p>
             <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
             <p>Co-authored Naval Special Warfare unmanned aircraft systems operating instruction.</p>
           </ul>
         
-        <h4>Naval Officer - Combat Aviator, 2000 - 2008</h4>
+        <h4>Naval Officer - Combat Aviator<span class="year">2000 - 2008</span></h4>
           <ul>
             <p>Amassed over 1400 tactical flight hours and 200 carrier arrested landings in both F-14A Tomcat and F/A-18F Super Hornet fighter aircraft.</p>
             <p>Flew 36 combat missions in support of Operations SOUTHERN WATCH and IRAQI FREEDOM.</p>
-            <p>Decorated for actions over enemy territory by being awarded Air Medal with 'V'.</p>
+            <p>Decorated for actions over enemy territory by being awarded <a href="http://en.wikipedia.org/wiki/Air_Medal" target="_blank">Air Medal</a> with 'V'.</p>
           </ul>
     </div>
 
