tinkering with link to resume again

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <nav><ul><li><a href="/#/resume.html">Resume</a></li></ul></nav>
+    <nav><ul><li><a href="resume.html">Resume</a></li></ul></nav>
     My name is Geoff Crittenden, and this is my website.
   </body>
 </html>
