added Font Awesome to index and resume

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
     <title>Geoff Crittenden</title>
   </head>
 
   <body>
-    <nav><ul><li><a href="resume.html">Resume</a></li></ul></nav>
+    <nav>
+      <ul>
+        <li>About Me</li>
+        <li><a href="resume.html">Resume</a></li>
+      </ul>
+    </nav>
     My name is Geoff Crittenden, and this is my website.
   </body>
 </html>
