--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
     <title>Geoff Crittenden</title>
   </head>
 
@@ -15,5 +15,11 @@
       </ul>
     </nav>
     My name is Geoff Crittenden, and this is my website.
+    <div class="social">
+      <i class="fa fa-twitter-square fa-3x"></i>
+      <i class="fa fa-github-square fa-3x"></i>
+      <i class="fa fa-linkedin-square fa-3x"></i>
+      <i class="fa fa-tumblr-square fa-3x"></i>
+    </div>
   </body>
 </html>
