--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="resume.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
     <title>Geoff Crittenden - Resume</title>
   </head>
 
