added back arrow to resume.html

--- a/resume.html
+++ b/resume.html
@@ -72,5 +72,7 @@
           </ul>
     </div>
 
+    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+
   </body>
 </html>
