formatting nav bar on index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <nav>
       <ul>
         <li>About Me</li>
+        <span id="name">GEOFF CRITTENDEN</span>
         <li><a href="resume.html">Resume</a></li>
       </ul>
     </nav>
-    My name is Geoff Crittenden, and this is my website.
+    <div class="content">
+      My name is Geoff Crittenden, and this is my website.
+    </div>
     <div class="social">
       <i class="fa fa-twitter-square fa-3x"></i>
       <i class="fa fa-github-square fa-3x"></i>
