format tweaks with nav bar

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       My name is Geoff Crittenden, and this is my website.
     </div>
     <div class="social">
-      <i class="fa fa-twitter-square fa-3x"></i>
-      <i class="fa fa-github-square fa-3x"></i>
-      <i class="fa fa-linkedin-square fa-3x"></i>
-      <i class="fa fa-tumblr-square fa-3x"></i>
+      <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+      <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+      <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+      <a href="http://geoffcrittenden.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
     </div>
   </body>
 </html>
