added normalize.css and fixed formatting snafus

--- a/index.html
+++ b/index.html
@@ -2,27 +2,30 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
     <title>Geoff Crittenden</title>
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li>About Me</li>
-        <span id="name">GEOFF CRITTENDEN</span>
-        <li><a href="resume.html">Resume</a></li>
-      </ul>
-    </nav>
-    <div class="content">
-      My name is Geoff Crittenden, and this is my website.
-    </div>
-    <div class="social">
-      <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
-      <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
-      <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-      <a href="http://geoffcrittenden.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
+    <div class="container">
+      <nav>
+        <ul>
+          <li>About Me</li>
+          <span id="name">GEOFF CRITTENDEN</span>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+      </nav>
+      <div class="content">
+        My name is Geoff Crittenden, and this is my website.
+      </div>
+      <div class="social">
+        <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+        <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+        <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+        <a href="http://geoffcrittenden.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
+      </div>
     </div>
   </body>
 </html>
