added arrows to index.html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         </ul>
       </nav>
       <div class="content">
-        My name is Geoff Crittenden, and this is my website.
+        <i id="up" class="fa fa-long-arrow-right fa-3x"></i>
+        <p>This is my name, and this is my website.</p>
+        <i id="down" class="fa fa-long-arrow-left fa-3x"></i>
       </div>
       <div class="social">
         <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
         <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
         <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-        <a href="http://geoffcrittenden.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
+        <a id="tumblr" href="http://geoffcrittenden.tumblr.com" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
       </div>
     </div>
   </body>
