added about.html and link to index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <nav>
         <ul>
-          <li>About Me</li>
+          <li><a href="about.html">About Me</a></li>
           <span id="name">GEOFF CRITTENDEN</span>
           <li><a href="resume.html">Resume</a></li>
         </ul>
