added download link to pdf on resume.html

--- a/resume.html
+++ b/resume.html
@@ -73,6 +73,7 @@
     </div>
 
     <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+    <a id="pdf" href="resume.pdf">Download PDF</a>
 
   </body>
 </html>
