--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+
+    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+    <a id="pdf" href="resume.pdf">Download PDF</a>
+    
     <div class="topper">
       <h1>GEOFFREY M. CRITTENDEN</h1>
 
