added SEALs to resume.html

--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
     <a id="pdf" href="resume.pdf">Download PDF</a>
-    
+
     <div class="topper">
       <h1>GEOFFREY M. CRITTENDEN</h1>
 
@@ -65,7 +65,7 @@
           <ul>
             <p>Operated airborne camera and provided aviation support for military units in training.</p>
             <p>Created an air-to-surface video streaming platform, utilizing RF and IP technologies, for clients to receive real-time video from in-progress operations.</p>
-            <p>Co-authored Naval Special Warfare unmanned aircraft systems operating instruction.</p>
+            <p>Co-authored Naval Special Warfare (SEALs) unmanned aircraft systems operating instruction.</p>
           </ul>
         
         <h4>Naval Officer / Combat Aviator | <a href="http://www.navy.mil/" target="_blank">U.S. Navy</a><span class="year">2000 - 2008</span></h4>
