about.html added and updated readme

--- a/about.html
+++ b/about.html
@@ -1,1 +1,34 @@
-about.html
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
+    <title>About Me - Geoff Crittenden</title>
+  </head>
+
+  <body>
+    <div class="container">
+      
+      <nav>
+        <ul>
+          <li><a href="about.html">About Me</a></li>
+          <span id="name"><a href="index.html">GEOFF CRITTENDEN</a></span>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+      </nav>
+
+      <div class="content">
+      </div>
+
+      <div class="social">
+        <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+        <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+        <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+        <i class="fa fa-tumblr-square fa-3x"></i>
+      </div>
+
+    </div>
+  </body>
+</html>
