--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a href="about.html">About Me</a></li>
-          <span id="name">GEOFF CRITTENDEN</span>
+          <span id="name"><a href="index.html">GEOFF CRITTENDEN</a></span>
           <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
