fixed nav bar format issues

--- a/about.html
+++ b/about.html
@@ -12,11 +12,9 @@
     <div class="container">
       
       <nav>
-        <ul>
-          <li><a href="about.html">About Me</a></li>
-          <span id="name"><a href="index.html">GEOFF CRITTENDEN</a></span>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
+        <a id="left" href="index.html">Home</a>
+        <a id="name" href="index.html">GEOFF CRITTENDEN</a></span>
+        <a id="right" href="resume.html">Resume</a>
       </nav>
 
       <div class="content">
