--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <body>
     <div class="container">
       <nav>
-        <ul>
-          <li><a href="about.html">About Me</a></li>
-          <span id="name"><a href="index.html">GEOFF CRITTENDEN</a></span>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
+        <a id="left" href="about.html">About Me</a>
+        <a id="name" href="index.html">GEOFF CRITTENDEN</a>
+        <a id="right" href="resume.html">Resume</a>
       </nav>
       <div class="content">
         <i id="up" class="fa fa-long-arrow-right fa-3x"></i>
