--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
         <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
         <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-        <i class="fa fa-tumblr-square fa-3x"></i>
+        <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i>
       </div>
 
     </div>
