changing format of index page and added countup timer to blog

--- a/index.html
+++ b/index.html
@@ -11,17 +11,12 @@
   <body>
     <div class="container">
       <nav>
-        <a id="left" href="about.html">About Me</a>
-        <a id="name" href="index.html">GEOFF CRITTENDEN</a>
-        <a id="right" href="resume.html">Resume</a>
+        <a href="http://blog.geoffcrittenden.com/">Blog</a>
+        <a href="resume.html">Resume</a>
+        <a href="about.html">About Me</a>
       </nav>
       <div class="content">
-        <i id="up" class="fa fa-long-arrow-right fa-3x"></i>
-        <p>This is my name, and this is my website.</p>
-        <i id="down" class="fa fa-long-arrow-left fa-3x"></i>
-        <p>
-
-        </p>
+        
       </div>
       <div class="social">
         <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
