--- a/resume.html
+++ b/resume.html
@@ -23,10 +23,12 @@
     </div>
 
     <div class="recent">
-      <h3>- RECENT SOFTWARE PROJECTS -</h3>
+      <h3>- RECENT PROJECTS -</h3>
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
+          <p>Technology Used: Websockets, Cron Tasks, Redis, Amazon EC2, Thin</p>
+          <p>APIs: Google Maps, Twitter Stream, Instagram, Chicago Transit Authority, Divvy, FlightStats, Eventful</p>
         </ul>
         <h4>Instant Meal Ordering | <a href="https://github.com/geoffcrittenden/qr_code" target="_blank">GitHub Repo</a></h4>
         <ul>
