--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+    <!-- <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a> -->
     <a id="pdf" href="resume.pdf">Download PDF</a>
 
     <div class="topper">
