--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,7 @@
           </ul>
     </div>
 
-    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
+    <!-- <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a> -->
     <a id="pdf" href="resume.pdf">Download PDF</a>
 
   </body>
