--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="container">
 
     <!-- <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a> -->
     <a id="pdf" href="resume.pdf">Download PDF</a>
@@ -78,8 +79,6 @@
           </ul>
     </div>
 
-    <!-- <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a> -->
-    <a id="pdf" href="resume.pdf">Download PDF</a>
-
+    </div>
   </body>
 </html>
