--- a/resume.html
+++ b/resume.html
@@ -28,16 +28,17 @@
         <h4><a href="http://citypulse.io" target="_blank">CityPulse.io</a> | <a href="https://github.com/geoffcrittenden/city-pulse" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Data visualization utilizing seven different APIs to display a current snapshot of activity across Chicago.</p>
-          <p>Technology Used: Websockets, Cron Tasks, Redis, Amazon EC2, Thin</p>
-          <p>APIs: Google Maps, Twitter Stream, Instagram, Chicago Transit Authority, Divvy, FlightStats, Eventful</p>
+          <p class="tech">Technology Used: Ruby on Rails, APIs, Websockets, Cron Tasks, Redis, Amazon EC2, Thin</p>
         </ul>
         <h4>Instant Meal Ordering | <a href="https://github.com/geoffcrittenden/qr_code" target="_blank">GitHub Repo</a></h4>
         <ul>
           <p>Framework for a fast-food ordering app to expedite point-of-sale for restaurants.</p>
+          <p class="tech">Technology Used: Ruby, Sinatra, API, JavaScript, AJAX, HTTP</p>
         </ul>
         <h4>ChromeCast Slideshow | <a href="https://github.com/geoffcrittenden/light-it-up" target="_blank">GitHub Repo</a></h4>
         <ul>
-          <p>A slideshow application to display information on a ChromeCast homepage between casts.</p>
+          <p>A test-driven slideshow application to display information on a ChromeCast homepage between casts.</p>
+          <p class="tech">Technology Used: Ruby on Rails, JavaScript, AJAX, BCrypt, RSpec, Travis, Capybara, Factory Girl</p>
         </ul>
     </div>
 
