adding features to front page and added post-its

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <a href="about.html">About Me</a>
       </nav>
       <div class="content">
+
+        <div class="col">
+          <h2>Check Out <a href="http://www.citypulse.io/" target="_blank">CityPulse.io</a></h2>
+        </div>
+        <div class="col">
+          <h2><a href="board.html">Play with Post-It Notes!</a></h2>
+        </div>
+        <div class="col">
+          <h2>It's Food.  On Your Phone.</h2>
+        </div>
         
       </div>
       <div class="social">
