changed links to blue on index.html and added home link to resume.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div class="intro" style="height: 100px;">
           <h1>GEOFF CRITTENDEN</h1>
+          <p>Web Developer / </p>
         </div>
         <div class="fetures">
           <div class="feature">
@@ -31,7 +32,7 @@
             <p></p>
           </div>
           <div class="feature">
-            <h2>It's Food.  On Your Phone.</h2>
+            <h2><a href="https://github.com/GeoffCrittenden/qr_code" target="_blank">It's Food.  On Your Phone.</a></h2>
             <p>Imagine if you could walk into your favorite lunch spot, such as Chipotle, and instantly order your food.  All you would need to do is scan it in and wait for your order to arrive.  No need to interact with another human, therefore no errors introduced.  Connect your credit/debit card or bank account, and pay instantly.  Simple, right?  This app doesn't do all that yet, but it will someday.  Stay tuned.</p>
             <span style="color: red;">link will be up soon</span>
           </div>
