--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
 
-    <!-- <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a> -->
+    <a id="go-back" href="index.html"><i class="fa fa-long-arrow-left"></i> Home</a>
     <a id="pdf" href="resume.pdf">Download PDF</a>
 
     <div class="topper">
