added copy to make justified text look better

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="fetures">
           <div class="feature">
             <h2>Check Out <a href="http://www.citypulse.io/" target="_blank">CityPulse.io</a></h2>
-            <p><a href="http://www.citypulse.io" target="_blank">CityPulse.io</a> is the final project I worked on at Dev Bootcamp in Chicago.  A team of four worked (almost) non-stop for eight straight days, utilizing seven APIs, to bring you a map application that displays a current snapshot, or the 'pulse' of, Chicago.</p>
+            <p><a href="http://www.citypulse.io" target="_blank">CityPulse.io</a> is the final project I worked on at Dev Bootcamp in Chicago.  A team of four devs worked (almost) non-stop for eight straight days, utilizing seven APIs, to bring you a map application that displays a current snapshot, or the 'pulse' of, Chicago.</p>
             <span><a href="http://www.citypulse.io" target="_blank">CityPulse.io</a></span>
           </div>
           <div class="feature">
@@ -33,7 +33,7 @@
           </div>
           <div class="feature">
             <h2><a href="https://github.com/GeoffCrittenden/qr_code" target="_blank">It's Food.  On Your Phone.</a></h2>
-            <p>Imagine if you could walk into your favorite lunch spot, such as Chipotle, and instantly order your food.  All you would need to do is scan it in and wait for your order to arrive.  No need to interact with another human, therefore no errors introduced.  Connect your credit/debit card or bank account, and pay instantly.  Simple, right?  This app doesn't do all that yet, but it will someday.  Stay tuned.</p>
+            <p>Imagine if you could walk into your favorite lunch spot, such as Chipotle, and instantly order your food.  All you would need to do is scan it in and wait for your order to arrive.  No need to interact with another human, therefore no errors are introduced.  Connect your credit/debit card or bank account, and pay instantly.  Simple, right?  This app doesn't do all that yet, but it will someday.  Stay tuned.</p>
             <span style="color: red;">link will be up soon</span>
           </div>
         </div>
