tweaked intro banner

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
         <div class="intro" style="height: 100px;">
           <h1>GEOFF CRITTENDEN</h1>
-          <p>Web Developer / </p>
+          <p>Web Developer / Software Engineer / All-Around Good Guy</p>
         </div>
+        <div class="border"></div>
         <div class="fetures">
           <div class="feature">
             <h2>Check Out <a href="http://www.citypulse.io/" target="_blank">CityPulse.io</a></h2>
