added post-its to index.html, tweaking now

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Marcellus|Graduate|Basic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Geoff Crittenden</title>
   </head>
 
@@ -30,7 +32,7 @@
           </div>
           <div class="feature">
             <h2><a href="board.html" target="_blank">Play with Post-It Notes!</a></h2>
-            <p></p>
+            <p id="board">Click Me</p>
           </div>
           <div class="feature">
             <h2><a href="https://github.com/GeoffCrittenden/qr_code" target="_blank">It's Food.  On Your Phone.</a></h2>
@@ -47,5 +49,9 @@
         <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
       </div>
     </div>
+
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <script src="post-it.js"></script>
   </body>
 </html>
