changed nav bar from fixed to absolute

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <div class="content">
         <p id="about"><img id="profile" src="profile_grey.jpg">Hello, I am an aspiring web developer.  I recently attended and graduated from an intensive web development course called Dev Botcamp in Chicago.  I definitely recommend this type of learning.  I was pushed to my limits and my knowledge of software design expanded by orders of magnitude.</p>
         <p id="about">I am currently seeking employment opportunites in Chicago, IL.  My strengths lie in back-end development with Ruby on Rails, but I also practice in JavaScript, JQuery, AJAX, HTML and CSS.</p>
-        <p id="about">My wife and I live in the South Loop area of Chicago, and we love it.  We hope to remain here for many years.  I also love taking photos, some of which I have up on this site.  Maybe some day I'll get good at it.</p>
+        <p id="about">My wife and I live in the South Loop area of Chicago, and we love it.  We hope to remain here for many years.  <!-- I also love taking photos, some of which I have up on this site.  Maybe some day I'll get good at it. --></p>
         <p id="thanks">Thanks,<br>Geoff</p>
       </div>
 
