updated post-it click box

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="feature">
             <h2><a href="board.html" target="_blank">Play with Post-It Notes!</a></h2>
-            <p class="board click-box">Click Me</p>
+            <p class="board" id="click-box">Click Me</p>
           </div>
           <div class="feature">
             <h2><a href="https://github.com/GeoffCrittenden/qr_code" target="_blank">It's Food.  On Your Phone.</a></h2>
