made the nav bar the same on all pages

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         <a href="index.html">Home</a>
         <a href="http://blog.geoffcrittenden.com/">Blog</a>
         <a href="resume.html">Resume</a>
+        <a href="about.html">About Me</a>
       </nav>
 
       <div class="content">
