--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div class="container">
       <nav>
+        <a href="index.html">Home</a>
         <a href="http://blog.geoffcrittenden.com/">Blog</a>
         <a href="resume.html">Resume</a>
         <a href="about.html">About Me</a>
