added border to click me box

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="intro" style="height: 100px;">
           <h1>GEOFF CRITTENDEN</h1>
-          <p>Web Developer / Software Engineer / All-Around Good Guy</p>
+          <p>Web Developer / Software Engineer</p>
         </div>
         <div class="border"></div>
         <div class="fetures">
