--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
       </div>
-      <div class="social">
+      <div class="social"><p>Find Me on the Web!</p>
         <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
         <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
         <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
