--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="feature">
             <h2><a href="board.html" target="_blank">Play with Post-It Notes!</a></h2>
             <p class="board" id="click-box">Click Me</p>
-            <p>Click inside the box above, or follow the link in the headline.  Post-Its are draggable, by the dark bar at their top, and you can write anything you want inside.  To make them disappear, just click the X in the upper right corner.</p>
+            <p>Click inside the box above, or follow the link in the headline.  Post-Its are draggable, by the dark bar at their top, and you can write anything you want inside.  To make them disappear, just click the 'X' in the upper right corner.</p>
           </div>
           <div class="feature">
             <h2><a href="https://github.com/GeoffCrittenden/qr_code" target="_blank">It's Food.  On Your Phone.</a></h2>
@@ -54,6 +54,6 @@
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    <script src="post-it.js"></script>
+    <script src="postit.js"></script>
   </body>
 </html>
