fixed typo of class 'fetures' on index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>Web Developer / Software Engineer</p>
         </div>
         <div class="border"></div>
-        <div class="fetures">
+        <div class="features">
           <div class="feature">
             <h2>Check Out <a href="http://www.citypulse.io/" target="_blank">CityPulse.io</a></h2>
             <p><a href="http://www.citypulse.io" target="_blank">CityPulse.io</a> is the final project I worked on at Dev Bootcamp in Chicago.  A team of four devs worked (almost) non-stop for eight straight days, utilizing seven APIs, to bring you a map application that displays a current snapshot, or the 'pulse,' of Chicago.</p>
