removed @ from email address on resume.html

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
     <div class="topper">
       <h1>GEOFFREY M. CRITTENDEN</h1>
 
-      <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt@gmail.com</span></p>
+      <p class="contact"><span>CHICAGO, IL</span>|<span>(312) 485-6300</span>|<span>geoffcritt -at- gmail.com</span></p>
 
       <h2 class="title">WEB DEVELOPER / SOFTWARE ENGINEER</h2>
       <p class="skills">Agile Development | Ruby on Rails | JavaScript | HTML | CSS</p>
