added shurly to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <h1>GEOFF CRITTENDEN</h1>
           <p>Web Developer / Software Engineer</p>
         </div>
+
         <div class="border"></div>
+
         <div class="features">
           <div class="feature">
             <h2>Check Out <a href="http://www.citypulse.io/" target="_blank">CityPulse.io</a></h2>
@@ -41,9 +43,22 @@
             <p>Imagine if you could walk into your favorite lunch spot, such as Chipotle, and instantly order your food.  All you would need to do is scan it in and wait for your order to arrive.  No need to interact with another human, therefore no errors are introduced.  Connect your credit/debit card or bank account, and pay instantly.  Simple, right?  This app doesn't do all that yet, but it will someday.  Stay tuned.</p>
             <span style="color: red;">link will be up soon</span>
           </div>
+
         </div>
         
+          <div class="shurly">
+            <p>
+              <form action="http://shurly.herokuapp.com/shurlyit" method="POST" target="_blank">
+                <label>Need to shorten a URL? 
+                  <input type="text" name="url" required placeholder="enter your url here" size="25" autofocus>
+                </label> 
+                <input type="submit" value="Shurly It!">
+              </form>
+            </p>
+          </div>
+
       </div>
+        
       <div class="social"><p>Find Me on the Web!</p>
         <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
         <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
