added meta tag viewport initial-scale=1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="font-awesome-4.0.2/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="initial-scale=1">
     <title>Geoff Crittenden</title>
   </head>
 
@@ -45,8 +46,8 @@
           </div>
 
         </div>
-        
-          <div class="shurly">
+
+          <div id="shurly">
             <p>
               <form action="http://shurly.herokuapp.com/shurlyit" method="POST" target="_blank">
                 <label>Need to shorten a URL? 
