added link to shurly source next to submit button

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                   <input type="text" name="url" required placeholder="enter your url here" size="25" autofocus>
                 </label> 
                 <input type="submit" value="Shurly It!">
+              <span>(Find the source <a href="https://github.com/GeoffCrittenden/shortly" target="_blank">here!</a>)</span>
               </form>
             </p>
           </div>
