tweaks with width, #shurly p, and moved social into content

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
 
         </div>
 
-          <div id="shurly">
-            <p>
-              <form action="http://shurly.herokuapp.com/shurlyit" method="POST" target="_blank">
-                <label>Need to shorten a URL? 
-                  <input type="text" name="url" required placeholder="enter your url here" size="25" autofocus>
-                </label> 
-                <input type="submit" value="Shurly It!">
-              <span>(Find the source <a href="https://github.com/GeoffCrittenden/shortly" target="_blank">here!</a>)</span>
-              </form>
-            </p>
-          </div>
+        <div id="shurly">
+          <p>
+            <form action="http://shurly.herokuapp.com/shurlyit" method="POST" target="_blank">
+              <label>Need to shorten a URL? 
+                <input type="text" name="url" required placeholder="enter your url here" size="25" autofocus>
+              </label> 
+              <input type="submit" value="Shurly It!">
+            <span>(source <a href="https://github.com/GeoffCrittenden/shortly" target="_blank">here!</a>)</span>
+            </form>
+          </p>
+        </div>
 
-      </div>
-        
-      <div class="social"><p>Find Me on the Web!</p>
-        <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
-        <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
-        <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-        <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
+        <div class="social"><p>Find Me on the Web!</p>
+          <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+          <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+          <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i></a>
+        </div>
+
       </div>
     </div>
 
