updated DOM on about.html to put social inside content

--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
         <p id="about">I am currently seeking employment opportunites in Chicago, IL.  My strengths lie in back-end development with Ruby on Rails, but I also practice in JavaScript, JQuery, AJAX, HTML and CSS.</p>
         <p id="about">My wife and I live in the South Loop area of Chicago, and we love it.  We hope to remain here for many years.  <!-- I also love taking photos, some of which I have up on this site.  Maybe some day I'll get good at it. --></p>
         <p id="thanks">Thanks,<br>Geoff</p>
-      </div>
 
-      <div class="social">
-        <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
-        <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
-        <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-        <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i>
+        <div class="social"><p>Find Me on the Web!</p>
+          <a href="http://twitter.com/GeoffCrittenden" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a>
+          <a href="https://github.com/GeoffCrittenden" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+          <a href="http://www.linkedin.com/in/geoffcritt" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a href="http://blog.geoffcrittenden.com/" target="_blank"><i class="fa fa-tumblr-square fa-3x"></i>
+        </div>
       </div>
 
     </div>
